[tool.poetry]
name = "pyrl"
version = "0.1.0"
description = ""
authors = ["Zoltán Nagy <abesto@abesto.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tcod = "^11.4.1"
esper = "^1.2"
tabulate = "^0.8.5"
appdirs = "^1.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.740"
isort = "^4.3.21"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

